[tool.poetry]
name = "RF_DatabaseLibrary"
version = "0.1.0"
description = "Projeto de Testes de Banco de Dados com Database Library"
authors = ["Robot Courses <git@robotcourses.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
robotframework = "^7.0.1"
robotframework-databaselibrary = "^1.4.4"
pymysql = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
